fix: positon on mobile

--- a/src/components/Header/Search/Search.module.css
+++ b/src/components/Header/Search/Search.module.css
@@ -38,7 +38,7 @@
   outline: 0;
   cursor: pointer;
   align-items: center;
-  width: 346px;
+  width: 100%;
   height: 35px;
   border-radius: 40px;
   font-style: italic;
@@ -198,6 +198,7 @@
 
   .container {
     position: relative;
+    width: 100%;
   }
 
   #searchModal.mini {
